finished authentication and fixed layout bugs

--- a/styles/temporary.module.scss
+++ b/styles/temporary.module.scss
@@ -3,7 +3,7 @@
 .backgroundImage {
     background: $bgEvent no-repeat center center;
     background-size: cover;
-    height: calc(100vh - 64px);
+    height: 100vh;
 }
 
 .titleFont{
